<resources>
    <string name="app_name">Droid adb tools</string>
    <string name="screen_activity">Screen activity</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="screenshot">Screenshot</string>
    <string name="exit">Exit</string>
    <string name="list_connected_devices">List connected devices</string>
    <string name="add_ip_devices">Add ip devices</string>
    <string name="settings">Settings</string>
    <string name="connect_ip_devices">Connect ip devices</string>
    <string name="disconnect_all_adb_devices">Disconnect all adb devices</string>
    <string name="kill_adb_server">Kill adb server</string>
    <string name="start_adb_server">Start adb server</string>
    <string name="adb_fix_setenforce">Adb fix setenforce</string>
    <string name="adb_shell">Adb shell</string>
    <string name="menu">Menu</string>
    <string name="power">Power</string>
    <string name="show_swipe_zone">Show swipe zone</string>
    <string name="resize_swipe_zone">Resize swipe zone</string>
    <string name="set_swipe_zone">Set swipe zone</string>
    <string name="add_ip_dev">Add dev IP</string>
    <string name="keygen">Generate adb public/private key</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_opening">Opening…</string>
    <string name="status_active">Active</string>
</resources>
