<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="105"
        android:title="@string/settings"
        android:visible="true" />
    <item
        android:id="@+id/get_list_con_dev"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="105"
        android:title="@string/list_connected_devices"
        android:visible="true" />
    <item
        android:id="@+id/action_select_dev"
        android:orderInCategory="110"
        android:title="@string/connect_ip_devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adb_disconnect"
        android:orderInCategory="110"
        android:title="@string/disconnect_all_adb_devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adb_kill"
        android:orderInCategory="110"
        android:title="@string/kill_adb_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adb_start"
        android:orderInCategory="110"
        android:title="@string/start_adb_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/fix_setenforce_dev"
        android:orderInCategory="110"
        android:title="@string/adb_fix_setenforce"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adb_shell"
        android:orderInCategory="110"
        android:title="@string/adb_shell"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_keygen"
        android:orderInCategory="110"
        android:title="@string/keygen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="110"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>