<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:alpha="0.85">

    <LinearLayout
        android:id="@+id/linearlayout_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/drawer_panel"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="#0AF4EEEE"
            android:descendantFocusability="blocksDescendants"
            android:divider="@android:color/transparent">

            <Button
                android:id="@+id/btn_set_swipe_zone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="top"
                android:layout_marginTop="8dp"
                android:text="@string/set_swipe_zone" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/btn_home"
                android:layout_marginTop="10dp"
                android:onClick="keyeventBack"
                android:text="@string/back" />

            <Button
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:onClick="keyeventHome"
                android:text="@string/home" />

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/btn_home"
                android:layout_marginTop="10dp"
                android:onClick="keyeventMenu"
                android:text="@string/menu" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:onClick="onExit"
                android:text="@string/exit" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>